# aworld-datagen

./: .env  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  bootstrap.sh
.github/workflows/: ci.yml
docker/: Makefile  docker-compose.yml
docker/src/: schema.rs
migrations/2019-10-08-062021_create_characters/: down.sql  up.sql
migrations/2019-10-08-073404_create_terrains/: down.sql  up.sql
migrations/2019-10-08-074206_create_items/: up.sql
migrations/2019-10-15-073051_create_relations/: up.sql
src/: connection.rs  context.rs  counter.rs  environment.rs  lib.rs  main.rs  query.rs  schedule.rs  schema.rs  utils.rs
src/actions/: character_action.rs  item_action.rs  mod.rs  relation_action.rs  system_action.rs
src/batches/: charge_down.rs  delete_character.rs  hunger.rs  mod.rs
src/dispachers/: character_dispacher.rs
src/dispatchers/: character_dispatcher.rs  item_dispatcher.rs  lib.rs  mod.rs  relation_dispatcher.rs
src/dispatches/: character_dispatcher.rs  item_dispatcher.rs  relation_dispatcher.rs
src/domain/: effect.rs  entity.rs  mod.rs
src/mappers/: backward.rs  forward.rs  login.rs  mod.rs  turn_left.rs  turn_right.rs  use_item.rs
src/models/: character.rs  field.rs  item.rs  mod.rs  ray.rs  relation.rs  terrain.rs
src/models/character/: move.rs  sleep.rs
src/services/: fetch_entity.rs  mod.rs  raycast.rs
src/transaction/: damage.rs
src/transactions/: attack.rs  avoid.rs  defence.rs  forward.rs  login.rs  mod.rs  pickup.rs  turn_left.rs  turn_right.rs  use.rs  use_item.rs
