[package]
name = "aworld-datagen"
version = "0.1.0"
authors = ["tamamu <tamamu.1r1s@gmail.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
diesel = { version = "1.0.0", features = ["mysql"] }
dotenv = "0.9.0"
rand = "0.7"
base64 = "0.10.1"
num-traits = "0.2"
num-derive = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = "0.4"
